# Video_Quality_Auditor

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
cfg/: config.test.yaml  config.yaml  logging.conf
cineinfini-v0_4_5/: FILES_TO_DELETE.txt  PATCH_README.md
cineinfini-v0_4_5/.github/workflows/: ci.yml
cineinfini-v0_4_5/scripts/: download_models.py
cineinfini-v0_4_5/src/cineinfini/: __init__.py
cineinfini-v0_4_5/src/cineinfini/core/: calibrate.py  config.py  metrics.py
cineinfini-v0_4_5/src/cineinfini/io/: reader.py
cineinfini-v0_4_5/tests/: test_engineering_v040.py
cineinfini-v0_4_6/: FILES_TO_DELETE.txt  PATCH_README.md  pyproject.toml
cineinfini-v0_4_6/cfg/: config.test.yaml  config.yaml
cineinfini-v0_4_6/scripts/: validate_on_bvi_vfi.py
cineinfini-v0_4_6/src/cineinfini/: __init__.py
cineinfini-v0_4_6/src/cineinfini/cli/: main.py
cineinfini-v0_4_6/src/cineinfini/core/: coherence.py  face_detection.py  inter_shot_loss.py  phase4_aggregator.py  prompt_engineering.py  shot_registry.py
cineinfini-v0_4_6/src/cineinfini/io/: report.py
cineinfini-v0_4_6/src/cineinfini/pipeline/: audit.py
cineinfini-v0_4_6/tests/: conftest.py  test_advanced.py  test_v046_features.py
docs/: cineinfini.compare.html  cineinfini.core.coherence.html  cineinfini.core.embedding.html  cineinfini.core.face_detection.html  cineinfini.core.metrics.html  cineinfini.io.reader.html  cineinfini.io.report.html  index.html  index.md  installation.md
docs/api/: index.html  search.js
docs/api_sphinx/.doctrees/: cineinfini.core.doctree  cineinfini.doctree
docs/mkdocs_api/: 404.html  index.html  objects.inv
docs/mkdocs_api/sphinx_api/: conf.py  modules.rst
docs/pydoc_final/: cineinfini.benchmark.html  cineinfini.html  cineinfini.pipeline.audit.html  index.html
docs/sphinx_api/: cineinfini.core.rst
docs/sphinx_api/_build/html/.doctrees/: modules.doctree
docs_mkdocs/: sitemap.xml
docs_mkdocs/api/: cineinfini.html
docs_mkdocs/installation/: index.html
docs_mkdocs/search/: search_index.json
docs_mkdocs/sphinx_api/: cineinfini.rst
notebooks/: 01_cineinfini_demo.ipynb  02_tears_of_steel_audit.ipynb  README.md
scripts/: animal_face_detect.py  generate_paper.py  run_audit.py
src/cineinfini/: __init__.py  __init__.py.v048  benchmark.py  benchmark.py.v046  compare.py.v048
src/cineinfini/cli/: main.py
src/cineinfini/core/: __init__.py.v048  animal_face.py  coherence.py  coherence.py.v046  config.py.v047  context.py  context.py.v048  device_utils.py  embedding.py  embedding.py.v048  face_detection.py  face_detection.py.bak  face_detection.py.v046  identity_dtw.py.v048  metrics.py  registry.py.v048  ui_registry.py.v047
src/cineinfini/io/: download.py.v046  reader.py  report.py  report_extended.py.v048  viz_utils.py.v048
src/cineinfini/io/renderers/: __init__.py  __init__.py.v048  base.py  benchmark_renderer.py  html_dashboard.py.v048  json_renderer.py.v047  jupyter_renderer.py.v048  markdown.py.v048  pdf_renderer.py  svg_renderer.py
src/cineinfini/modules/: __init__.py.v047  background_consistency.py.v047  base.py  identity_consistency.py  motion_coherence.py.v047  motion_coherence.py.v048  semantic_consistency.py  semantic_consistency.py.v047
src/cineinfini/pipeline/: audit.py  audit.py.v047  orchestrator.py.v047  render_dispatch.py
tests/: conftest.py  test_advanced.py  test_animal_face.py  test_audit.py  test_coherence_v030.py  test_embedding.py  test_face_detection.py  test_final_integration.py  test_identity_dtw.py  test_metrics.py  test_metrics_core.py  test_report.py  test_v0481_benchmark_renderer.py  test_v0481_weasyprint_backend.py
tests/integration/: test_report_extended_bbb.py
