[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cineinfini-audit"
dynamic = ["version"]
description = "CineInfini: Adaptive Multi-Stage Video Quality Audit Pipeline"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Salah-Eddine BENBRAHIM", email = "benbrahim.salah.eddine.777@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8", "numpy>=1.24", "matplotlib>=3.5", "pandas>=1.5",
    "scipy>=1.9", "scikit-image>=0.19", "Pillow>=9.5", "torch>=2.0",
    "onnxruntime>=1.14", "open-clip-torch>=2.20", "transformers>=4.30",
    "requests>=2.28", "click>=8.1", "markdown>=3.4", "weasyprint>=60", "plotly>=5.15",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0", "pytest-cov>=4.0",
    "black>=23", "ruff>=0.4",
    "mypy>=1.0",
]
dtw = ["dtaidistance>=2.3", "fastdtw>=0.3.4"]

[project.scripts]
cineinfini = "cineinfini.cli.main:cli"

[tool.setuptools.dynamic]
version = {attr = "cineinfini.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cineinfini*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "integration: tests that download data or need model weights",
    "slow: tests that take >60s",
]
addopts = "-m 'not integration and not slow'"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
